feat: try to fix http check

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -86,6 +86,10 @@ linters:
     - godox
     - godot
     - testpackage
+    - gochecknoinits
+    - dupl
+    - depguard
+    - funlen
 
 issues:
   exclude-rules:
