--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,28 +114,16 @@ jobs:
   security:
     name: Security Scan
     runs-on: ubuntu-latest
+    env:
+      GO111MODULE: on
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-    
-    - name: Install Gosec
-      run: |
-        go install github.com/securego/gosec/v2/cmd/gosec@latest
-    
-    - name: Run Gosec Security Scanner
-      run: |
-        gosec -fmt sarif -out gosec.sarif ./...
-    
-    - name: Upload SARIF file
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: gosec.sarif
+      - name: Checkout Source
+        uses: actions/checkout@v3
+      - name: Run Gosec Security Scanner
+        uses: securego/gosec@master
+        with:
+          args: ./...
 
   build:
     name: Build
