--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -182,7 +182,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: [test, integration-test, lint, security, build]
+    needs: [test, lint, security, build]
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     
     steps:
